syntax = "proto3";

option csharp_namespace = "ItemManagementSystem.Grpc.OrderItem";

import "Protos/order.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package orderItem;

service OrderItemService{
	rpc GetOrderItem(GetOrderItemReques)returns(OrderItemReply);
	rpc GetListOrder(google.protobuf.Empty)returns(ListReply);
	rpc CreateOrderItem(CreateOrderItemReques)returns(OrderItemReply);
	rpc UpdateOrderItem(UpdateOrderItemReques)returns(OrderItemReply);
	rpc DeleteOrderItem(DeleteOrderItemReques)returns(google.protobuf.BoolValue);
	
}

message OrderItemReply{
	int32 id = 1;
	int32 order = 2;
	string name = 3;
	DecimalValue quantity =4;
	string unit =5;
}
message GetOrderItemReques{
	int32 id = 1;
}

message CreateOrderItemReques{
	int32 order = 1;
	string name = 2;
	DecimalValue quantity =3;
	string unit =4;
}
message UpdateOrderItemReques{
	int32 id = 1;
	int32 order = 2;
	string name = 3;
	DecimalValue quantity =4;
	string unit =5;
}
message DeleteOrderItemReques{
	int32 id =1;
}

message ListReply{
	repeated OrderItemReply order =1;
}

message DecimalValue{
	int64 units =1;
	sfixed32 nanos =2;
}
